--- a/index.html
+++ b/index.html
@@ -8,128 +8,216 @@
   </head>
   <body>
     <div class="">
-      <div class="company-detail" style="display: flex;">
-        <div class="left">
-          <div class="logo">
-            <img src="LOGO-WANQARA-REDONDO.png" alt="" class="logo-img">
-          </div>
-          <div class="company px-3">
-            <h2 class="m-0">Empresa de prueba</h2>
-            <h3 class="m-0">Nombre comercial Wanqara</h3>
-            <div class="w-100 text-left">
-                <p class="left-bold-text m-0">Direc. Matriz:</p>
-                <p class="m-0">DIRECCION PRUEBA / QUITO / PICHINCHA</p>
-            </div>
-            <div class="w-100 text-left">
-                <p class="left-bold-text m-0">Direc. Sucursal:</p>
-                <p class="m-0">DIRECCION DE LA SUCURSAL</p>
-            </div>
-            <div class="w-100 text-left">
-                <p class="left-bold-text inline m-0">Conctactos:</p>
-                <div class="m-0">
-                    <p class="m-0 inline">
-                        9999999
-                    </p>
-                    <p class="m-0 inline">
-                        correo@gmai.com
-                    </p>
-                    <p class="m-0 inline">
-                        ESLOGAN WANQARA
-                    </p>
+      <table class="w-100">
+        <tbody>
+          <tr>
+            <td class="text-center">
+              <div class="left">
+                <div class="logo">
+                  <img src="LOGO-WANQARA-REDONDO.png" alt="" class="logo-img" />
                 </div>
-            </div>
-            <div class="w-100 text-left">
-                <p class="left-bold-text m-0">Obligado a llevar contabilidad:</p>
-                <p class="m-0">SI
-                </p>
-            </div>
-            <p class="m-0">Agente de Retención No. 1</p>
-            <p class="m-0">CONTRIBUYENTE RÉGIMEN RIMPE</p>
-          </div>
-        </div>
-        <div class="rigth text-right">
-            <h1 class="m-0">FACTURA</h1>
-            <div class="text-right w-100">
-                <p class="m-0 inline mr-3">No.</p>
-                <h3 class="m-0 text-red-bold inline">004-006-000001268</h3>
-            </div>
-            <div class="text-right w-100">
-                <p class="m-0 inline mr-3">Fecha y hora de emisión:</p>
-                <p class="m-0 inline">29/09/2023 00:00:00</p>
-            </div>
-            <div class="divider"></div>
-            <div class="right-detail text-left px-3">
-                <h4 class="m-0 semi-bold">NÚMERO DE AUTORIZACIÓN</h4>
-                <p class="m-0">2909202301179278024100120040060000012680000000018</p>
-                <div class="w-100 text-left">
+                <div class="company px-3">
+                  <h2 class="m-0">Empresa de prueba</h2>
+                  <h3 class="m-0">Nombre comercial Wanqara</h3>
+                  <div class="w-100 text-left">
+                    <p class="left-bold-text m-0">Direc. Matriz:</p>
+                    <p class="m-0">DIRECCION PRUEBA / QUITO / PICHINCHA</p>
+                  </div>
+                  <div class="w-100 text-left">
+                    <p class="left-bold-text m-0">Direc. Sucursal:</p>
+                    <p class="m-0">DIRECCION DE LA SUCURSAL</p>
+                  </div>
+                  <div class="w-100 text-left">
+                    <p class="left-bold-text inline m-0">Conctactos:</p>
+                    <div class="m-0">
+                      <p class="m-0 inline">9999999</p>
+                      <p class="m-0 inline">correo@gmai.com</p>
+                      <p class="m-0 inline">ESLOGAN WANQARA</p>
+                    </div>
+                  </div>
+                  <div class="w-100 text-left">
+                    <p class="left-bold-text m-0">
+                      Obligado a llevar contabilidad:
+                    </p>
+                    <p class="m-0">SI</p>
+                  </div>
+                  <p class="m-0">Agente de Retención No. 1</p>
+                  <p class="m-0">CONTRIBUYENTE RÉGIMEN RIMPE</p>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="rigth text-right">
+                <h1 class="m-0">FACTURA</h1>
+                <div class="text-right w-100">
+                  <p class="m-0 inline mr-3">No.</p>
+                  <h3 class="m-0 text-red-bold inline">004-006-000001268</h3>
+                </div>
+                <div class="text-right w-100">
+                  <p class="m-0 inline mr-3">Fecha y hora de emisión:</p>
+                  <p class="m-0 inline">29/09/2023 00:00:00</p>
+                </div>
+                <div class="divider"></div>
+                <div class="right-detail text-left px-3">
+                  <h4 class="m-0 semi-bold">NÚMERO DE AUTORIZACIÓN</h4>
+                  <p class="m-0">
+                    2909202301179278024100120040060000012680000000018
+                  </p>
+                  <div class="w-100 text-left">
                     <h4 class="m-0 semi-bold inline">AMBIENTE</h4>
                     <p class="ml-3 inline">PRODUCCIÓN</p>
-                </div>
-                <div class="w-100 text-left">
+                  </div>
+                  <div class="w-100 text-left">
                     <h4 class="m-0 semi-bold inline">EMISIÓN</h4>
                     <p class="ml-3 semi-bold inline">NORMAL</p>
-                </div>
-                <div class="">
+                  </div>
+                  <div class="">
                     <!-- CODIGO DE BARRA -->
+                  </div>
+                  <p>2909202301179278024100120040060000012680000000018</p>
                 </div>
-                <p>2909202301179278024100120040060000012680000000018</p>
-            </div>
-            <div class="divider"></div>
-            <div class="w-100 text-center">
-                <p class="m-0">**Visita nuestra tienda web: www.wanqara.com **</p>
-            </div>
-        </div>
+                <div class="divider"></div>
+                <div class="w-100 text-center">
+                  <p class="m-0">
+                    **Visita nuestra tienda web: www.wanqara.com **
+                  </p>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="w-100 border">
+        <tbody>
+          <tr>
+            <td class="w-min">
+              <p class="m-0 inline">Razon social/Nombre y Apellidos</p>
+            </td>
+            <td class="w-80">
+              <p class="ml-3 inline">Abel Heredia</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="w-min">
+              <p class="m-0 inline">Identificacion:</p>
+            </td>
+            <td class="w-80">
+              <p class="ml-3 inline">1757568637</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="w-min">
+              <p class="m-0 inline">Fecha Emision:</p>
+            </td>
+            <td class="w-80">
+              <p class="ml-3 inline">25/09/23</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="w-min">
+              <p class="m-0 inline">Direccion:</p>
+            </td>
+            <td class="w-80">
+              <p class="ml-3 inline">Calderon</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="product-description w-100">
+        <table class="w-100">
+          <thead>
+            <tr>
+              <th class="border-square">Codigo Principal</th>
+              <th class="border-square">Cantidad</th>
+              <th class="w-50 border-square">Descripción</th>
+              <th class="border-square">Precio unitario</th>
+              <th class="border-square">Descuento</th>
+              <th class="border-square">Precio tota</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>759494005755</td>
+              <td>1.00</td>
+              <td>220v</td>
+              <td>1.116</td>
+              <td>0.00</td>
+              <td>1.12</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-
-        <div class="client-info border"></div>
-        <div class="product-description">
-            <table>
-                <thead>
-                  <tr>
-                    <th>Codigo Principal</th>
-                    <th>Cantidad</th>
-                    <th>Descripción</th>
-                    <th>Precio unitario</th>
-                    <th>Descuento</th>
-                    <th>Precio tota</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>759494005755</td>
-                    <td>1.00</td>
-                    <td>220v</td>
-                    <td>1.116</td>
-                    <td>0.00</td>
-                    <td>1.12</td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-        <div class="">
-            <div class="extra-info border">
-
-            </div>
-            <div class="price">
+      <table class="w-100 mt-3">
+        <tr>
+          <td class="extra-info border w-80">
+            <table class="w-100">
+              <tr>
+                <td>
+                  <p class="m-0 semi-bold underline">Informacion adicional</p>
+                </td>
+              </tr>
+              <tr>
+                <td>Direccion</td>
+                <td>Clderon</td>
+              </tr>
+              <tr>
+                <td>telefono</td>
+                <td>0996812812</td>
+              </tr>
+              <tr>
+                <td>Correo</td>
+                <td>test@admin.com</td>
+              </tr>
+              <tr>
+                <td>Atendido por</td>
+                <td>3-tpv</td>
+              </tr>
+              <tr>
+                <td>Observacion</td>
+                <td>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit
+                </td>
+              </tr>
+            </table>
+          </td>
+          <td class="price">
+            <table class="w-100 m-0">
               <tbody>
-                <thead>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>SUBTOTAL 12%</td>
-                        <td>129.55</td>
-                    </tr>
-                </tbody>
+                <tr>
+                  <td>SUBTOTAL 12%</td>
+                  <td>129.55</td>
+                </tr>
+                <tr>
+                  <td>SUBTOTAL 12%</td>
+                  <td>129.55</td>
+                </tr>
+                <tr>
+                  <td>SUBTOTAL 12%</td>
+                  <td>129.55</td>
+                </tr>
+                <tr>
+                  <td>SUBTOTAL 12%</td>
+                  <td>129.55</td>
+                </tr>
+                <tr>
+                  <td>SUBTOTAL 12%</td>
+                  <td>129.55</td>
+                </tr>
               </tbody>
-            </div>
-        </div>
-        <div class="payment-method">
-
-        </div>
+            </table>
+          </td>
+        </tr>
+      </table>
+      <table class="payment-method w-50">
+        <tr>
+          <td class="w-80 text-center semi-bold">Forma de pago</td>
+          <td class="text-center semi-bold">valor</td>
+        </tr>
+        <tr>
+          <td class="w-80">Forma de pago</td>
+          <td class="text-right">valor</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
