--- a/debito.html
+++ b/debito.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Factura</title>
+    <title>Debito</title>
   </head>
   <body>
     <table class="w-100">
@@ -11,7 +11,7 @@
         <img src="LOGO-WANQARA-REDONDO.png" alt="" class="logo" />
       </td>
       <td class="w-50">
-        <h1 class="text-right text-brow">FACTURA</h1>
+        <h1 class="text-right text-brow">NOTA DE DÉBITO</h1>
         <div class="text-right">
           <div class="w-100">
             <p class="inline">No.</p>
@@ -67,7 +67,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="ml-3 barra">Codigo de barra</div>
+        <div class="ml-3 barra text-center">CLAVE DE ACCESO</div>
         <div class="ml-3">
           <p class="text-center">
             3105202301179278024100120040100000001360000000011
@@ -83,7 +83,7 @@
     <div class="divider"></div>
     <table>
       <tr>
-        <td class="w-70 text-base">
+        <td class="w-70 text-base td-align-top">
           <p>
             <span class="semi-bold">Nombre:</span> HIDROVO SALTOS ALEXIS
             PATRICIO (LA VACA GORDA)
@@ -94,8 +94,16 @@
             COTACACHI / IMBABURA
           </p>
           <p><span class="semi-bold">Identificación:</span> 1002992707001</p>
-          <p><span class="semi-bold">Email:</span>alexispatoh@gmail.com</p>
-          <p><span class="semi-bold">Teléfono:</span> 0993197086</p>
+          <p><span class="semi-bold">Fecha Emisión:</span> 31/05/2023</p>
+          <p>
+            <span class="semi-bold">Comprobante que se modifica:</span
+            >001-010-000004359
+          </p>
+          <p>
+            <span class="semi-bold"
+              >Fecha de Emisión (Comprobante a modificar):</span
+            >28/08/2023
+          </p>
         </td>
         <td class="w-30">
           <table class="w-100">
@@ -128,12 +136,8 @@
     <table class="table-details">
       <thead>
         <tr>
-          <th>Cant.</th>
-          <th>Cod. Principal</th>
-          <th>Descripción</th>
-          <th>Precio Unitario</th>
-          <th>Desc.</th>
-          <th>Total</th>
+          <th>RAZÓN DE LA MODIFICACIÓN</th>
+          <th>VALOR DE LA MODIFICACIÓN</th>
         </tr>
         <tr>
           <td colspan="6">
@@ -143,55 +147,37 @@
       </thead>
       <tbody>
         <tr>
-          <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
-          <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
-          </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
+          <td>Interes por mora</td>
+          <td>194.27</td>
         </tr>
         <tr>
-          <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
-          <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
-          </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
+          <td>RENTA</td>
+          <td>194.27</td>
         </tr>
       </tbody>
     </table>
     <table class="w-100">
-      <td class="w-50">
-        <p class="text-md">Observacion</p>
+      <td class="w-50" style="vertical-align: top !important">
+        <p class="semi-bold">Información Adicional</p>
         <table class="table-subdetails">
-          <thead>
-            <tr>
-              <th class="text-md text-normal">Forma de pago</th>
-              <th class="text-md text-normal">Valor</th>
-            </tr>
-          </thead>
           <tbody>
             <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
-              </td>
-              <td class="semi-bold">100.00</td>
+              <td class="text-md">Liquidacion extrajudicial::</td>
+              <td class="text-md">JCE-PIC-LEX-6419-2022</td>
             </tr>
             <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
+              <td class="text-md">Titulo de credito:</td>
+              <td class="text-md">6367-PIC-2022</td>
+            </tr>
+            <tr>
+              <td class="text-md">Email cliente:</td>
+              <td class="text-md">
+                contabilidad@wanqara.com; info@wanqara.com
               </td>
-              <td class="semi-bold">95.00</td>
             </tr>
           </tbody>
         </table>
-        <p class="text-md mt-3">Atendido por:</p>
+        <p class="text-md mt-6">Atendido por:</p>
         <p class="semi-bold">ARACELY BEATRIZ CUSME BALDERRAMO</p>
       </td>
       <td class="w-50 td-align-top text-right">
@@ -201,23 +187,57 @@
             <td>174.11</td>
           </tr>
           <tr>
+            <td class="semi-bold">SUBTOTAL 0%</td>
+            <td>174.11</td>
+          </tr>
+          <tr>
+            <td class="semi-bold">SUBTOTAL NO OBJETO DE IVA</td>
+            <td>174.11</td>
+          </tr>
+          <tr>
+            <td class="semi-bold">SUBTOTAL EXENTO DE IVA</td>
+            <td>174.11</td>
+          </tr>
+          <tr>
+            <td class="semi-bold">SUBTOTAL SIN IMPUESTOS</td>
+            <td>174.11</td>
+          </tr>
+          <tr>
+            <td class="semi-bold">ICE</td>
+            <td>20.89</td>
+          </tr>
+          <tr>
             <td class="semi-bold">IVA 12%</td>
             <td>20.89</td>
           </tr>
           <tr>
-            <td class="semi-bold">Subtotal sin impuestos</td>
+            <td class="semi-bold">TOTAL DEVOLUCION IVA</td>
             <td>290.18</td>
           </tr>
           <tr>
-            <td class="semi-bold">Descuento</td>
+            <td class="semi-bold">IRBPNR</td>
             <td>116.07</td>
           </tr>
           <tr>
-            <td class="semi-bold">Valor Total</td>
+            <td class="semi-bold">VALOR TOTAL</td>
             <td>195.00</td>
           </tr>
         </table>
       </td>
+    </table>
+    <table class="text-base">
+      <thead>
+        <tr>
+          <th>Forma de pago</th>
+          <th>Valor</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>01 - SIN UTILIZACION DEL SISTEMA FINANCIERO</td>
+          <td class="px-3">3.59</td>
+        </tr>
+      </tbody>
     </table>
     <table class="w-100">
       <td class="w-40">
@@ -387,6 +407,9 @@
     }
     .mt-3 {
       margin-top: 10px;
+    }
+    .mt-6 {
+      margin-top: 100px;
     }
     .px-3 {
       padding-left: 10px;
