--- a/liquidacion.html
+++ b/liquidacion.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Factura</title>
+    <title>Liquidacion</title>
   </head>
   <body>
     <table class="w-100">
@@ -11,7 +11,7 @@
         <img src="LOGO-WANQARA-REDONDO.png" alt="" class="logo" />
       </td>
       <td class="w-50">
-        <h1 class="text-right text-brow">FACTURA</h1>
+        <h1 class="text-right text-brow">LIQUIDACIÓN COMPRA</h1>
         <div class="text-right">
           <div class="w-100">
             <p class="inline">No.</p>
@@ -67,7 +67,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="ml-3 barra">Codigo de barra</div>
+        <div class="ml-3 barra text-center">CLAVE DE ACCESO</div>
         <div class="ml-3">
           <p class="text-center">
             3105202301179278024100120040100000001360000000011
@@ -83,7 +83,7 @@
     <div class="divider"></div>
     <table>
       <tr>
-        <td class="w-70 text-base">
+        <td class="w-70 text-base td-align-top">
           <p>
             <span class="semi-bold">Nombre:</span> HIDROVO SALTOS ALEXIS
             PATRICIO (LA VACA GORDA)
@@ -94,8 +94,9 @@
             COTACACHI / IMBABURA
           </p>
           <p><span class="semi-bold">Identificación:</span> 1002992707001</p>
+          <p><span class="semi-bold">Fecha Emisión:</span> 31/05/2023</p>
           <p><span class="semi-bold">Email:</span>alexispatoh@gmail.com</p>
-          <p><span class="semi-bold">Teléfono:</span> 0993197086</p>
+          <p><span class="semi-bold">Telefono:</span>0992503092</p>
         </td>
         <td class="w-30">
           <table class="w-100">
@@ -128,12 +129,12 @@
     <table class="table-details">
       <thead>
         <tr>
-          <th>Cant.</th>
-          <th>Cod. Principal</th>
+          <th>Codigo Principal</th>
+          <th>Cantidad</th>
           <th>Descripción</th>
-          <th>Precio Unitario</th>
-          <th>Desc.</th>
-          <th>Total</th>
+          <th>Precio unitario</th>
+          <th>Descuento</th>
+          <th>Precio total</th>
         </tr>
         <tr>
           <td colspan="6">
@@ -143,54 +144,32 @@
       </thead>
       <tbody>
         <tr>
+          <td>SERV006</td>
           <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
-          <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
-          </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
+          <td class="w-50">ALIMENTACION ADM</td>
+          <td>194.27</td>
+          <td>0.00</td>
+          <td>217.58</td>
         </tr>
         <tr>
+          <td>SERV006</td>
           <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
-          <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
-          </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
+          <td>ALIMENTACION ADM</td>
+          <td>194.27</td>
+          <td>0.00</td>
+          <td>217.58</td>
         </tr>
       </tbody>
     </table>
     <table class="w-100">
       <td class="w-50">
         <p class="text-md">Observacion</p>
-        <table class="table-subdetails">
-          <thead>
-            <tr>
-              <th class="text-md text-normal">Forma de pago</th>
-              <th class="text-md text-normal">Valor</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
-              </td>
-              <td class="semi-bold">100.00</td>
-            </tr>
-            <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
-              </td>
-              <td class="semi-bold">95.00</td>
-            </tr>
-          </tbody>
-        </table>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+          doloribus, provident nulla sequi veritatis illo. Impedit consequatur
+          facilis error hic exercitationem id beatae iste mollitia, dolorum
+          explicabo! Nam, tempore aliquid?
+        </p>
         <p class="text-md mt-3">Atendido por:</p>
         <p class="semi-bold">ARACELY BEATRIZ CUSME BALDERRAMO</p>
       </td>
