--- a/remision.html
+++ b/remision.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Factura</title>
+    <title>Remision</title>
   </head>
   <body>
     <table class="w-100">
@@ -11,7 +11,7 @@
         <img src="LOGO-WANQARA-REDONDO.png" alt="" class="logo" />
       </td>
       <td class="w-50">
-        <h1 class="text-right text-brow">FACTURA</h1>
+        <h1 class="text-right text-brow">GUIA DE REMISIÓN</h1>
         <div class="text-right">
           <div class="w-100">
             <p class="inline">No.</p>
@@ -41,7 +41,7 @@
         <p>(02) 255-9682 / (04) 224-0038</p>
         <p>ventas@wanqara.com</p>
         <p class="semi-bold">Obligado a llevar contabilidad: SI</p>
-        <p class="semi-bold">Agente de Retención No. 1</p>
+        <p class="semi-bold">Contribuyente Especial Nro: 1</p>
       </td>
       <td class="w-50 td-align-top text-base">
         <div class="divider"></div>
@@ -67,7 +67,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="ml-3 barra">Codigo de barra</div>
+        <div class="ml-3 barra text-center">CLAVE DE ACCESO</div>
         <div class="ml-3">
           <p class="text-center">
             3105202301179278024100120040100000001360000000011
@@ -81,144 +81,74 @@
       </td>
     </table>
     <div class="divider"></div>
-    <table>
+    <table class="w-100">
       <tr>
-        <td class="w-70 text-base">
+        <td class="w-50 text-base td-align-top">
+          <p><span class="semi-bold">Fecha Emisión:</span> 12/10/2023</p>
           <p>
-            <span class="semi-bold">Nombre:</span> HIDROVO SALTOS ALEXIS
-            PATRICIO (LA VACA GORDA)
+            <span class="semi-bold">RUC/ CI (Transportista):</span>0991285679001
+          </p>
+          <p><span class="semi-bold">Placa:</span> gbu-0258</p>
+          <p>
+            <span class="semi-bold">Punto de Partida:</span>Guayaquil Garzota
           </p>
           <p>
-            <span class="semi-bold">Dirección:</span>IMBABURA / COTACACHI / SAN
-            FRANCISCO / PEDRO MONCAYO Y ENTRE IMBABURA Y 10 DE AGOSTO /
-            COTACACHI / IMBABURA
+            <span class="semi-bold">Fecha Inicio Transporte:</span> 31/05/2023
           </p>
-          <p><span class="semi-bold">Identificación:</span> 1002992707001</p>
-          <p><span class="semi-bold">Email:</span>alexispatoh@gmail.com</p>
-          <p><span class="semi-bold">Teléfono:</span> 0993197086</p>
+          <p><span class="semi-bold">Fecha fin Transporte:</span> 31/05/2023</p>
         </td>
-        <td class="w-30">
-          <table class="w-100">
-            <tbody>
-              <tr>
-                <td>
-                  <p class="inline btn-success">Descuento</p>
-                </td>
-                <td>
-                  <h1 class="text-right">$116.07</h1>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>
-                  <p class="text-right">Valor a Cancelar</p>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>
-                  <h2 class="text-right">$195.00</h2>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <td class="w-50 text-base td-align-top">
+          <p>
+            <span class="semi-bold">Comprobante de Venta:</span>
+            005-002-000001522
+          </p>
+          <p>
+            <span class="semi-bold">Número de Autorización:</span
+            >1210202301099124384400120070010000015221234567810
+          </p>
+          <p><span class="semi-bold">Motivo Traslado:</span> Venta</p>
+          <p>
+            <span class="semi-bold">Destinatario (Pto. Llegada):</span>Rodrigo
+            de Triana n26-21 francisco de orellana edi Gorimar QUITO ECUADOR
+          </p>
+          <p>
+            <span class="semi-bold">RUC/IC (Destinatario):</span> 1792780241001
+          </p>
+          <p>
+            <span class="semi-bold">Razón Social / Nombres Apellidos:</span>
+            TODONEG S.A.
+          </p>
         </td>
       </tr>
     </table>
-    <table class="table-details">
+    <table class="table-details w-100">
       <thead>
         <tr>
-          <th>Cant.</th>
-          <th>Cod. Principal</th>
-          <th>Descripción</th>
-          <th>Precio Unitario</th>
-          <th>Desc.</th>
-          <th>Total</th>
-        </tr>
-        <tr>
-          <td colspan="6">
-            <div class="divider"></div>
-          </td>
+          <th>Codigo Principal</th>
+          <th>Cantidad</th>
+          <th>Descripcion</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
+          <td>3NSIMPPORPPT205BT</td>
+          <td>2.00</td>
           <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
+            IMPRESORA 3NSTAR PORTATIL PPT205BT BLUETOOTH - USB / COMPATIBLE
+            WINDOWS - ANDROID - LINUX
           </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
         </tr>
         <tr>
-          <td>1.00</td>
-          <td>RENLICILLRESILIA NULOC</td>
+          <td>3NSIMPPORPPT205BT</td>
+          <td>2.00</td>
           <td>
-            RENOVACION LICENCIA ILLARLI RESTAURANTES VERSION ILIMITADA ANUAL
-            LOCAL
+            IMPRESORA 3NSTAR PORTATIL PPT205BT BLUETOOTH - USB / COMPATIBLE
+            WINDOWS - ANDROID - LINUX
           </td>
-          <td>290.18</td>
-          <td>116.07</td>
-          <td>174.11</td>
         </tr>
       </tbody>
     </table>
-    <table class="w-100">
-      <td class="w-50">
-        <p class="text-md">Observacion</p>
-        <table class="table-subdetails">
-          <thead>
-            <tr>
-              <th class="text-md text-normal">Forma de pago</th>
-              <th class="text-md text-normal">Valor</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
-              </td>
-              <td class="semi-bold">100.00</td>
-            </tr>
-            <tr>
-              <td class="semi-bold">
-                20 - OTROS CON UTILIZACIÓN DEL SISTEMA FINANCIERO
-              </td>
-              <td class="semi-bold">95.00</td>
-            </tr>
-          </tbody>
-        </table>
-        <p class="text-md mt-3">Atendido por:</p>
-        <p class="semi-bold">ARACELY BEATRIZ CUSME BALDERRAMO</p>
-      </td>
-      <td class="w-50 td-align-top text-right">
-        <table class="w-100">
-          <tr>
-            <td class="semi-bold">SUBTOTAL 12%</td>
-            <td>174.11</td>
-          </tr>
-          <tr>
-            <td class="semi-bold">IVA 12%</td>
-            <td>20.89</td>
-          </tr>
-          <tr>
-            <td class="semi-bold">Subtotal sin impuestos</td>
-            <td>290.18</td>
-          </tr>
-          <tr>
-            <td class="semi-bold">Descuento</td>
-            <td>116.07</td>
-          </tr>
-          <tr>
-            <td class="semi-bold">Valor Total</td>
-            <td>195.00</td>
-          </tr>
-        </table>
-      </td>
-    </table>
+
     <table class="w-100">
       <td class="w-40">
         <div class="greatings">
@@ -273,17 +203,15 @@
     * {
       margin: 0;
       padding: 0;
-      padding-left: 4px;
-      padding-right: 4px;
       overflow-x: hidden;
     }
+
     td,
     tr,
     th,
     thead,
     tbody,
     table {
-      padding: 0;
       margin: 0;
     }
     p,
@@ -293,6 +221,10 @@
     h3 {
       margin: 0;
       padding: 0;
+    }
+    body {
+      padding-left: 10px;
+      padding-right: 10px;
     }
     .inline {
       display: inline;
@@ -346,9 +278,7 @@
     .text-normal {
       font-weight: 500;
     }
-    .table-details {
-      width: 100%;
-    }
+
     .table-details th {
       text-align: left;
     }
@@ -364,6 +294,7 @@
 
     .table-details tbody tr {
       border-bottom: 1pt solid rgb(179, 179, 179);
+      border-top: 1pt solid rgb(179, 179, 179);
       font-size: 13px;
       height: 40px;
     }
@@ -387,6 +318,9 @@
     }
     .mt-3 {
       margin-top: 10px;
+    }
+    .mt-6 {
+      margin-top: 100px;
     }
     .px-3 {
       padding-left: 10px;
